# panda-bot

./: .env.example  .gitignore  README.md  config.example.yaml  install.py  pyproject.toml
.claude/: settings.local.json
data/: mcp_servers.json  panda_bot.db-shm
src/panda_bot/: __init__.py  __main__.py  app.py  config.py  log.py
src/panda_bot/ai/: client.py  conversation.py  handler.py  tool_runner.py
src/panda_bot/ai/tools/: base.py  browser.py  executor.py  filesystem.py  registry.py  scheduler.py  screen_capture.py
src/panda_bot/core/: bot_registry.py  session.py  types.py
src/panda_bot/messenger/: base.py  discord_adapter.py  models.py  telegram.py
src/panda_bot/services/: base.py  browser.py  mcp_manager.py  scheduler.py  service_manager.py
src/panda_bot/storage/: conversation_repo.py  database.py  models.py
