[project]
name = "panda-bot"
version = "0.1.0"
description = "Multi-messenger bot platform with Claude AI integration"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.78.0",
    "python-telegram-bot>=21.9",
    "discord.py>=2.4.0",
    "apscheduler>=3.10.4",
    "playwright>=1.49.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[project.scripts]
panda-bot = "panda_bot.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
